--- a/index.htm
+++ b/index.htm
@@ -14,10 +14,10 @@
 
 <div id="barraFija">
     <h1>Completar arrastrando</h1>
-    <div class="Dragable" data-tipo="comunicarse"><img class="tache" style="display:none" src="tache.png" />comunicarse</div>
-    <div class="Dragable" data-tipo="biblioteca"><img class="tache" style="display:none" src="tache.png" />biblioteca</div>
-    <div class="Dragable" data-tipo="INEGI"><img class="tache" style="display:none" src="tache.png" />INEGI</div>
-    <div class="Dragable" data-tipo="Enciclomedia"><img class="tache" style="display:none" src="tache.png" />Enciclomedia</div>
+    <div class="contenedor"><div class="Dragable" data-tipo="comunicarse"><img class="tache" style="display:none" src="tache.png" />comunicarse</div></div>
+    <div class="contenedor"><div class="Dragable" data-tipo="biblioteca"><img class="tache" style="display:none" src="tache.png" />biblioteca</div></div>
+    <div class="contenedor"><div class="Dragable" data-tipo="INEGI"><img class="tache" style="display:none" src="tache.png" />INEGI</div></div>
+    <div class="contenedor"><div class="Dragable" data-tipo="Enciclomedia"><img class="tache" style="display:none" src="tache.png" />Enciclomedia</div></div>
 </div>
 <div class="destino" id="drops">
     1.- Negroponte opina que: "Los niños leen y escriben en Internet para <div class="DropTarget" data-destino="comunicarse"><img class="palomita" style="display:none" src="palomita.png" /></div> y no sólo para completar algún ejercicio abstracto y artificial".<br />
