Cambios a presentación e interacción
Detecta automáticamente cuántos botones son.
Ajusta el margen superior del div scrollable
Calcula calificación

--- a/index.htm
+++ b/index.htm
@@ -6,28 +6,39 @@
     <meta name="keywords" content="Drag and Drop, Javascript, HTML5, Diseño responsivo">
     <meta name="author" content="Adib Abud Jaso">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Completar arrastrando</title>
+    <title>Unidad 1 :: Autoevaluaci&oacute;n 4</title>
     <script type="text/javascript" src="dragEnunciados.js"></script>
     <link rel="stylesheet" href="estilosDragEnunciados.css" />
+    <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
+    <div id="externoFijo">
+        <div id="barraFija">
+            <p class="subtitulo_01">Unidad 1 <br><span class="titulo_01">Autoevaluaci&oacute;n 1</span></p>
+            <p><strong>Generalidades de la teor&iacute;a social</strong></p>
+            <p>A continuaci&oacute;n se presenta una serie de enunciados referentes a la teor&iacute;a social. De acuerdo con el apartado correspondiente en el material b&aacute;sico de la asignatura y el documento <em>Aspectos generales de la teor&iacute;a social</em>, selecciona y arrastra con el cursor la respuesta correcta para completar los espacios vac&iacute;os de cada oraci&oacute;n. Al realizar el ejercicio podr&aacute;s ver tu resultado.</p>
 
-<div id="barraFija">
-    <h1>Completar arrastrando</h1>
-    <div class="contenedor"><div class="Dragable" data-tipo="comunicarse"><img class="tache" style="display:none" src="tache.png" />comunicarse</div></div>
-    <div class="contenedor"><div class="Dragable" data-tipo="biblioteca"><img class="tache" style="display:none" src="tache.png" />biblioteca</div></div>
-    <div class="contenedor"><div class="Dragable" data-tipo="INEGI"><img class="tache" style="display:none" src="tache.png" />INEGI</div></div>
-    <div class="contenedor"><div class="Dragable" data-tipo="Enciclomedia"><img class="tache" style="display:none" src="tache.png" />Enciclomedia</div></div>
-</div>
-<div class="destino" id="drops">
-    1.- Negroponte opina que: "Los niños leen y escriben en Internet para <div class="DropTarget" data-destino="comunicarse"><img class="palomita" style="display:none" src="palomita.png" /></div> y no sólo para completar algún ejercicio abstracto y artificial".<br />
-    2.- A la Internet la podemos comparar como a una gran <div class="DropTarget" data-destino="biblioteca"><img class="palomita" style="display:none" src="palomita.png" /></div>.<br />
-    3.- El <div class="DropTarget" data-destino="INEGI"><img class="palomita" style="display:none" src="palomita.png" /></div> es la entidad del Gobierno mexicano que desarrollo el Portal Ciberhabitat.<br />
-    4.- El proyecto <div class="DropTarget" data-destino="Enciclomedia"><img class="palomita" style="display:none" src="palomita.png" /></div> es un programa de cómputo multimedia que relaciona los contenidos digitales de los libros de texto con recursos interactivos a través de ligas de hipertexto.
-</div>
-
-<div id="retroalimentacion"></div>
-<div id="mensajes"></div>
-
+            <div class="contenedor"><div class="Dragable" data-tipo="1"><img class="tache" style="display:none" src="tache.png" />Teoría social</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="2"><img class="tache" style="display:none" src="tache.png" />Durkheim</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="3"><img class="tache" style="display:none" src="tache.png" />concepto</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="4"><img class="tache" style="display:none" src="tache.png" />teoría</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="5"><img class="tache" style="display:none" src="tache.png" />Ander-Egg</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="6"><img class="tache" style="display:none" src="tache.png" />Giddens</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="7"><img class="tache" style="display:none" src="tache.png" />objetividad</div></div>
+            <div class="contenedor"><div class="Dragable" data-tipo="8"><img class="tache" style="display:none" src="tache.png" />sentido común</div></div>
+        </div>
+    </div>
+    <div class="destino">
+        1.	La <div class="DropTarget" data-destino="1"><img class="palomita" style="display:none" src="palomita.png" /></div> es una ciencia social que estudia el desarrollo, estructura y función de la sociedad.<br />
+        2.	<div class="DropTarget" data-destino="2"><img class="palomita" style="display:none" src="palomita.png" /></div> es considerado el fundador de la sociología, ya que fue el primero en definir al hecho social, aunque Comte haya escrito antes sobre la física social.<br />
+        3.	El <div class="DropTarget" data-destino="3"><img class="palomita" style="display:none" src="palomita.png" /></div> indica que se debe observar y buscar al formular determinadas cuestiones empíricas; es la base de la teoría.<br />
+        4.	La <div class="DropTarget" data-destino="4"><img class="palomita" style="display:none" src="palomita.png" /></div> busca explicar las relaciones entre distintos tipos de fenómenos, a fin de predecir o controlar sucesos.<br />
+        5.	<div class="DropTarget" data-destino="5"><img class="palomita" style="display:none" src="palomita.png" /></div> define como sociedad a la agrupación natural o pactada entre personas para lograr un fin determinado.<br />
+        6.	La teoría social, de acuerdo con <div class="DropTarget" data-destino="6"><img class="palomita" style="display:none" src="palomita.png" /></div>, es toda publicación con rigor científico que permite realizar interpretaciones sociológicas.<br />
+        7.	La <div class="DropTarget" data-destino="7"><img class="palomita" style="display:none" src="palomita.png" /></div> es la característica científica que implica dejar de lado las prenociones o preferencias en la investigación.<br />
+        8.	El <div class="DropTarget" data-destino="8"><img class="palomita" style="display:none" src="palomita.png" /></div> puede provocar la desvirtualización de la investigación científica, al dejarnos llevar por opiniones y preferencias.<br />
+        <div id="retroalimentacion"></div>
+    </div>
+    <div id="mensajes"></div>
 </body>
 </html>
