--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
         <div id="barraFija">
             <p class="subtitulo_01">Unidad 1 <br><span class="titulo_01">Autoevaluaci&oacute;n 1</span></p>
             <p><strong>Generalidades de la teor&iacute;a social</strong></p>
-            <p>A continuaci&oacute;n se presenta una serie de enunciados referentes a la teor&iacute;a social. De acuerdo con el apartado correspondiente en el material b&aacute;sico de la asignatura y el documento <em>Aspectos generales de la teor&iacute;a social</em>, selecciona y arrastra con el cursor la respuesta correcta para completar los espacios vac&iacute;os de cada oraci&oacute;n. Al realizar el ejercicio podr&aacute;s ver tu resultado.</p>
+            <p>Selecciona y arrastra con el cursor la respuesta correcta para completar los espacios vac&iacute;os de cada oraci&oacute;n. Al realizar el ejercicio podr&aacute;s ver tu resultado.</p>
 
             <div class="contenedor"><div class="Dragable" data-tipo="1"><img class="tache" style="display:none" src="tache.png" />Teoría social</div></div>
             <div class="contenedor"><div class="Dragable" data-tipo="2"><img class="tache" style="display:none" src="tache.png" />Durkheim</div></div>
