--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,10 @@
     <meta name="author" content="Adib Abud Jaso">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Unidad 1 :: Autoevaluaci&oacute;n 4</title>
-    <script type="text/javascript" src="dragEnunciados.js"></script>
-    <link rel="stylesheet" href="estilosDragEnunciados.css" />
-    <link rel="stylesheet" href="estilos.css" />
+    <script type="text/javascript" src="js/Array.from.js"></script>
+    <script type="text/javascript" src="js/dragEnunciados.js"></script>
+    <link rel="stylesheet" href="css/estilosDragEnunciados.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
     <div id="externoFijo">
@@ -17,26 +18,27 @@
             <p class="subtitulo_01">Unidad 1 <br><span class="titulo_01">Autoevaluaci&oacute;n 1</span></p>
             <p><strong>Generalidades de la teor&iacute;a social</strong></p>
             <p>Arrastra la respuesta correcta para completar los espacios vac&iacute;os de cada oraci&oacute;n.</p>
-
-            <div class="contenedor"><div class="Dragable" data-tipo="1"><img class="tache" style="display:none" src="tache.png" />Teoría social</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="2"><img class="tache" style="display:none" src="tache.png" />Durkheim</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="3"><img class="tache" style="display:none" src="tache.png" />concepto</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="4"><img class="tache" style="display:none" src="tache.png" />teoría</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="5"><img class="tache" style="display:none" src="tache.png" />Ander-Egg</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="6"><img class="tache" style="display:none" src="tache.png" />Giddens</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="7"><img class="tache" style="display:none" src="tache.png" />objetividad</div></div>
-            <div class="contenedor"><div class="Dragable" data-tipo="8"><img class="tache" style="display:none" src="tache.png" />sentido común</div></div>
+            <div id="respuestas">
+                <div class="Dragable" data-tipo="1">Teoría social</div>
+                <div class="Dragable" data-tipo="2">Durkheim</div>
+                <div class="Dragable" data-tipo="3">concepto</div>
+                <div class="Dragable" data-tipo="4">teoría</div>
+                <div class="Dragable" data-tipo="5">Ander-Egg</div>
+                <div class="Dragable" data-tipo="6">Giddens</div>
+                <div class="Dragable" data-tipo="7">objetividad</div>
+                <div class="Dragable" data-tipo="8">sentido común</div>
+            </div>
         </div>
     </div>
     <div class="destino">
-        1.	La <div class="DropTarget" data-destino="1"><img class="palomita" style="display:none" src="palomita.png" /></div> es una ciencia social que estudia el desarrollo, estructura y función de la sociedad.<br />
-        2.	<div class="DropTarget" data-destino="2"><img class="palomita" style="display:none" src="palomita.png" /></div> es considerado el fundador de la sociología, ya que fue el primero en definir al hecho social, aunque Comte haya escrito antes sobre la física social.<br />
-        3.	El <div class="DropTarget" data-destino="3"><img class="palomita" style="display:none" src="palomita.png" /></div> indica que se debe observar y buscar al formular determinadas cuestiones empíricas; es la base de la teoría.<br />
-        4.	La <div class="DropTarget" data-destino="4"><img class="palomita" style="display:none" src="palomita.png" /></div> busca explicar las relaciones entre distintos tipos de fenómenos, a fin de predecir o controlar sucesos.<br />
-        5.	<div class="DropTarget" data-destino="5"><img class="palomita" style="display:none" src="palomita.png" /></div> define como sociedad a la agrupación natural o pactada entre personas para lograr un fin determinado.<br />
-        6.	La teoría social, de acuerdo con <div class="DropTarget" data-destino="6"><img class="palomita" style="display:none" src="palomita.png" /></div>, es toda publicación con rigor científico que permite realizar interpretaciones sociológicas.<br />
-        7.	La <div class="DropTarget" data-destino="7"><img class="palomita" style="display:none" src="palomita.png" /></div> es la característica científica que implica dejar de lado las prenociones o preferencias en la investigación.<br />
-        8.	El <div class="DropTarget" data-destino="8"><img class="palomita" style="display:none" src="palomita.png" /></div> puede provocar la desvirtualización de la investigación científica, al dejarnos llevar por opiniones y preferencias.<br />
+        1.	La <div class="DropTarget" data-destino="1"></div> es una ciencia social que estudia el desarrollo, estructura y función de la sociedad.<br />
+        2.	<div class="DropTarget" data-destino="2"></div> es considerado el fundador de la sociología, ya que fue el primero en definir al hecho social, aunque Comte haya escrito antes sobre la física social.<br />
+        3.	El <div class="DropTarget" data-destino="3"></div> indica que se debe observar y buscar al formular determinadas cuestiones empíricas; es la base de la teoría.<br />
+        4.	La <div class="DropTarget" data-destino="4"></div> busca explicar las relaciones entre distintos tipos de fenómenos, a fin de predecir o controlar sucesos.<br />
+        5.	<div class="DropTarget" data-destino="5"></div> define como sociedad a la agrupación natural o pactada entre personas para lograr un fin determinado.<br />
+        6.	La teoría social, de acuerdo con <div class="DropTarget" data-destino="6"></div>, es toda publicación con rigor científico que permite realizar interpretaciones sociológicas.<br />
+        7.	La <div class="DropTarget" data-destino="7"></div> es la característica científica que implica dejar de lado las prenociones o preferencias en la investigación.<br />
+        8.	El <div class="DropTarget" data-destino="8"></div> puede provocar la desvirtualización de la investigación científica, al dejarnos llevar por opiniones y preferencias.<br />
         <div id="retroalimentacion"></div>
     </div>
     <div id="mensajes"></div>
